Fixed some url issues

--- a/Resume.html
+++ b/Resume.html
@@ -18,7 +18,7 @@
         <nav>
             <div class="container">
                 <ul>
-                    <li><a href="GamesPortfolio.html">Games Projects</a></li>
+                    <li><a href="index.html">Games Projects</a></li>
                     <li><a href="WebMobilePortfolio.html">Web & Mobile Projects</a></li>
                     <li><a><div class="activeTab">Resume</div></a></li>
                     <li><a href="About.html">About Me</a></li>
