--- a/WebMobilePortfolio.html
+++ b/WebMobilePortfolio.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="container">
                 <ul>
-                    <li><a href="GamesPortfolio.html">Games Projects</a></li>
+                    <li><a href="index.html">Games Projects</a></li>
                     <li><a><div class="activeTab">Web & Mobile Projects</div></a></li>
                     <li><a href="Resume.html">Resume</a></li>
                     <li><a href="About.html">About Me</a></li>
