--- a/Projects/Project_1.html
+++ b/Projects/Project_1.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="container">
                 <ul>
-                    <li><a href="../GamesPortfolio.html">Games Projects</a></li>
+                    <li><a href="../index.html">Games Projects</a></li>
                     <li><a href="../WebMobilePortfolio.html">Web & Mobile Projects</a></li>
                     <li><a href="../Resume.html">Resume</a></li>
                     <li><a href="../About.html">About Me</a></li>
