Updated Resume For 2024

--- a/Resume.html
+++ b/Resume.html
@@ -60,6 +60,34 @@
                     </div>
                 </div>
                 <div class="titleBanner">
+                    <h3>Technical Skills</h3>
+                </div>
+                <div class="underline"></div>
+                <ul>
+                    <li>Javascript proficient</li>
+                    <li>Microsoft Office proficient</li>
+                    <li>Photoshop proficient</li>
+                    <li>Unity proficient</li>
+                    <li>C# proficient</li>
+                    <li>HTML proficient</li>
+                    <li>Javascript proficient</li>
+                    <li>Cascading Stylesheets (CSS) proficient</li>
+                    <li>jQuery intermediate</li>
+                    <li>React intermediate</li>
+                    <li>React Native intermediate</li>
+                </ul>
+                <div class="titleBanner">
+                    <h3>Transferrable Skills</h3>
+                </div>
+                <div class="underline"></div>
+                <ul>
+                    <li>Goal oriented</li>
+                    <li>Punctual and reliable</li>
+                    <li>Highly accurate and efficient</li>
+                    <li>Proficient communicator</li>
+                    <li>Team oriented</li>
+                </ul>
+                <div class="titleBanner">
                     <h3>Work Experience</h3>
                 </div>
                 <div class="underline"></div>
@@ -67,7 +95,12 @@
                     <div class="infoItem">
                         <h4>Marketing Consultant</h4>
                         <p class="subHeader">Viva Madrid</p>
-                        <p>Aided in photographic material, name branding and preliminary website design.</p>
+                        <ul>
+                            <li>Supported brand development through creative photographic materials and preliminary website design.</li>
+                            <li>Developed and managed photographic content for marketing purposes.</li>
+                            <li>Assisted in preliminary website design using HTML, CSS, and JavaScript.</li>
+                            <li>Utilized Adobe Photoshop for creating marketing materials.</li>
+                        </ul>
                     </div>
                     <div class="endItem">
                         <p>11/2019 - 12/2022</p>
@@ -77,13 +110,30 @@
                     <div class="infoItem">
                         <h4>Lead Game Developer</h4>
                         <p class="subHeader">Brainybucks Consultancy</p>
-                        <p>
-                            Developed vertical slice / prototype for a financial literacy game. More information 
-                            on this project available in the Game Portfolio page. 
-                        </p>
+                        <ul>
+                            <li>Spearheaded the development of a financial literacy game vertical slice, from ideation through to prototype stage.</li>
+                            <li>Conceptualized and designed a financial literacy game using Unity and C#.</li>
+                            <li>Integrated interactive learning elements into game design.</li>
+                            <li>Managed version control and documentation.</li>
+                        </ul>
                     </div>
                     <div class="endItem">
                         <p>01/2023 - 07/2023</p>
+                    </div>
+                </div>
+                <div class="infoBlock">
+                    <div class="infoItem">
+                        <h4>IT Graduate</h4>
+                        <p class="subHeader">We're The Glue</p>
+                        <ul>
+                            <li>Front line respondent to customer inquiries to their technological issues.</li>
+                            <li>Helped customers fix issues with proprietary software or relayed potential bugs to development team.</li>
+                            <li>Collaborated with a team of  developers, designers, and production managers.</li>
+                            <li>Maintained communication channels between developers and customers.</li>
+                        </ul>
+                    </div>
+                    <div class="endItem">
+                        <p>01/2024 - Current</p>
                     </div>
                 </div>
                 <div class="titleBanner">
@@ -112,37 +162,7 @@
                         <p>03/2017 - 10/2017</p>
                     </div>
                 </div>
-                <div class="titleBanner">
-                    <h3>Technical Skills</h3>
-                </div>
-                <div class="underline"></div>
-                <ul>
-                    <li>Javascript proficient</li>
-                    <li>Microsoft Office proficient</li>
-                    <li>Photoshop proficient</li>
-                    <li>Unity proficient</li>
-                    <li>C# proficient</li>
-                    <li>HTML proficient</li>
-                    <li>Javascript proficient</li>
-                    <li>Cascading Stylesheets (CSS) proficient</li>
-                    <li>jQuery intermediate</li>
-                    <li>React intermediate</li>
-                    <li>React Native intermediate</li>
-                </ul>
-                <div class="titleBanner">
-                    <h3>Transferrable Skills</h3>
-                </div>
-                <div class="underline"></div>
-                <ul>
-                    <li>Goal oriented</li>
-                    <li>Punctual and reliable</li>
-                    <li>Highly accurate and efficient</li>
-                    <li>Proficient communicator</li>
-                    <li>Team oriented</li>
-                </ul>
-                
             </div>
-
         </section>
         <footer>
             
