Added Timely Repairs

--- a/Projects/Project_4.html
+++ b/Projects/Project_4.html
@@ -39,11 +39,11 @@
                 </p>
                 <a class="playButton" href="https://mstefo.itch.io/recomposition" target="_blank">Play Recomposition On itch.io</a>
                 <div class="grid">
-                    <figure onclick="expandImage('Images/Recomposition/Player Drawing.png', 'Player Drawing Rose Plant & Revived Vine')">
+                    <figure onclick="expandImage('Recomposition/Player Drawing.png', 'Player Drawing Rose Plant & Revived Vine')">
                         <img src="../Images/Recomposition/Player Drawing.png" alt="Recomposition - Player Drawing Rose Plant & Revived Vine">
                         <figcaption>Player Drawing Rose Plant & Revived Vine</figcaption>
                     </figure>
-                    <figure onclick="expandImage('Images/Recomposition/Rose Blocking Vine.png', 'Rose Thorns Blocking Vines')">
+                    <figure onclick="expandImage('Recomposition/Rose Blocking Vine.png', 'Rose Thorns Blocking Vines')">
                         <img src="../Images/Recomposition/Rose Blocking Vine.png" alt="Recomposition - Rose Thorns Blocking Vines">
                         <figcaption>Rose Thorns Blocking Vines</figcaption>
                     </figure>
@@ -63,7 +63,7 @@
                         <li>Solidified theme of project</li>
                     </ul>
                 </div>
-                <figure onclick="expandImage('Images/Recomposition/Results Screen.png', 'Results Screen')">
+                <figure onclick="expandImage('Recomposition/Results Screen.png', 'Results Screen')">
                     <img src="../Images/Recomposition/Results Screen.png" alt="Recomposition - Results Screen">
                     <figcaption style="text-align: center;">Results Screen</figcaption>
                 </figure>
