Added Workshop Page

--- a/Resume.html
+++ b/Resume.html
@@ -75,6 +75,14 @@
                     <li>jQuery intermediate</li>
                     <li>React intermediate</li>
                     <li>React Native intermediate</li>
+                    <li>Github proficient</li>
+                    <li>Git intermediate</li>
+                    <li>Jira intermediate</li>
+                    <li>AWS Certified Cloud Practictioner 
+                        <ul>
+                            <li>Validation Number: 968884c7d394492cb9143811120abb51</li>
+                        </ul>
+                    </li>
                 </ul>
                 <div class="titleBanner">
                     <h3>Transferrable Skills</h3>
@@ -119,21 +127,6 @@
                     </div>
                     <div class="endItem">
                         <p>01/2023 - 07/2023</p>
-                    </div>
-                </div>
-                <div class="infoBlock">
-                    <div class="infoItem">
-                        <h4>IT Graduate</h4>
-                        <p class="subHeader">We're The Glue</p>
-                        <ul>
-                            <li>Front line respondent to customer inquiries to their technological issues.</li>
-                            <li>Helped customers fix issues with proprietary software or relayed potential bugs to development team.</li>
-                            <li>Collaborated with a team of  developers, designers, and production managers.</li>
-                            <li>Maintained communication channels between developers and customers.</li>
-                        </ul>
-                    </div>
-                    <div class="endItem">
-                        <p>01/2024 - 04/2024</p>
                     </div>
                 </div>
                 <div class="titleBanner">
