--- a/index.html
+++ b/index.html
@@ -103,7 +103,20 @@
                         </div>
                         <p class="programmingLanguage">C Sharp</p>
                     </div>
-                    
+                    <div class="underline"></div>
+                    <div class="project" onclick="OpenProject(9)" style="margin-top: 20px;">
+                        <h3>Overwatch Workshop Projects</h3>
+                        <img src="https://cdn.workshop.codes/008jvpb331e5ju1za17auaj204gx" alt="Timely Repairs Title Image"/>
+                        <div class="projectDetails">
+                            <h4>Roles</h4>
+                            <h4>Status</h4>
+                            <h4>Development</h4>
+                            <p>Game Designer, Lead Programmer</p>
+                            <p>Various</p>
+                            <p>Various</p>
+                        </div>
+                        <p class="programmingLanguage">Workshop Syntax</p>
+                    </div>
                     <!-- <div class="verticalLine"></div> -->
                     
 
