Added grand prize winner certificate to timely repairs

--- a/Projects/Project_8.html
+++ b/Projects/Project_8.html
@@ -34,7 +34,7 @@
                 <h4 class="center">What Is Timely Repairs?</h4>
                 <p class="gameInfoText">
                     Timely Repairs is a 2D puzzle / speedrun game where the player must repair as many clocks as possible
-                    within the 2 minute time limit. This game was submitted for the MACSJAM Semester 1 (2024). The game
+                    within the 2 minute time limit. This game was submitted for the MACSJAM Semester 1 (2024) & was the grand prize winner. The game
                     was developed to follow the theme "Analogue", with the player fixing analogue clocks.
                 </p>
                 <p class="gameInfoText"></br>Although this Game Jam was active for 48 hours, I was only a contributor for the second day</p>
@@ -44,9 +44,10 @@
                         <img src="../Images/Timely Repairs/New Clock.png" alt="Timely Repairs - New Clock">
                         <figcaption>New Clock</figcaption>
                     </figure>
-                    <figure onclick="expandImage('Timely Repairs/Taken Apart Clock.png', 'Clock With All Parts Taken Out')">
-                        <img src="../Images/Timely Repairs/Taken Apart Clock.png" alt="Timely Repairs - Clock With All Parts Taken Out">
-                        <figcaption>Clock With All Parts Taken Out</figcaption>
+                    
+                    <figure onclick="expandImage('Timely Repairs/MACSJAM 3.0 Grand Prize Certificate Michal.pdf', 'MACSJAM Grand Prize Certificate')">
+                        <img src="../Images/Timely Repairs/MACSJAM 3.0 Grand Prize Certificate Michal.png" alt="MACSJAM grand prize certificate">
+                        <figcaption>Grand Prize Certificate</figcaption>
                     </figure>
                 </div>
                 <div class="underline"></div>
@@ -65,11 +66,16 @@
                         <li>Created score bonus formulas</li>
                     </ul>
                 </div>
-                <figure onclick="expandImage('Timely Repairs/Results Screen.png', 'Results Screen')">
-                    <img src="../Images/Timely Repairs/Results Screen.png" alt="Timely Repairs - Results Screen">
-                    <figcaption style="text-align: center;">Results Screen</figcaption>
-                </figure>
-                
+                <div class="grid">
+                    <figure onclick="expandImage('Timely Repairs/Results Screen.png', 'Results Screen')">
+                        <img src="../Images/Timely Repairs/Results Screen.png" alt="Timely Repairs - Results Screen">
+                        <figcaption style="text-align: center;">Results Screen</figcaption>
+                    </figure>
+                    <figure onclick="expandImage('Timely Repairs/Taken Apart Clock.png', 'Clock With All Parts Taken Out')">
+                        <img src="../Images/Timely Repairs/Taken Apart Clock.png" alt="Timely Repairs - Clock With All Parts Taken Out">
+                        <figcaption>Clock With All Parts Taken Out</figcaption>
+                    </figure>
+                </div>
                 <div class="gameInfoBlock">
                     <h5>Lead Programmer</h5>
                     <ul>
